# SoloPilot

./: .env  .env.example  .env.preview.template  .env.production.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  AWS_BEDROCK_SETUP.md  CLAUDE.md  Dockerfile  Makefile  README.md  REFACTOR_MERGE_PLAN.md  ci_token_validation_results.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test_provider_integration.py  test_real_serena.py  test_real_serena_performance.py  usage_tracking2.json  vercel.json
.github/: SECRETS_TEMPLATE.md  branch-protection.md
.github/serena/: Dockerfile
.github/workflows/: ci.yml  deploy.yml  review.yml  serena-integration.yml
.serena/: project.yml
Software-Engineer-AI-Agent-Atlas/: SHORT_IMPORTANT_MEMORY.md
agents/: __init__.py
agents/ai_providers/: __init__.py  base.py  bedrock.py  codewhisperer.py  factory.py  fake.py
agents/analyser/: __init__.py  parser.py
agents/common/: __init__.py  bedrock_client.py
agents/dev/: context7_bridge.py  context_engine.py  context_packer.py  dev_agent.py
agents/email_intake/: README.md  README_MULTI_TURN.md  README_SETUP.md  conversation_state.py  conversation_state_v2.py  conversational_responder.py  deployment_tracker.py  dynamodb_schema.md  email_agent.py  email_parser.py  email_sender.py  lambda_function.py  lambda_function_v2.py  migrate_dynamodb.py  pdf_generator.py  requirement_extractor.py  utils.py
agents/marketing/: __init__.py  poster.py
agents/planning/: __init__.py  models.py  planner.py
agents/review/: __init__.py  reviewer_agent.py
config/: model_config.yaml  progressive_context_config.yaml
doc-service/: SPRINT1_PROGRESS.md
doc-service/lambda/: .gitignore  README.md  deploy.sh  package.json  test-local.js
doc-service/terraform/: .gitignore  README.md  main.tf  outputs.tf  plan.sh  s3_helpers.js  terraform.tfvars.example  variables.tf
docs/: DEPLOYMENT.md  DEV_AGENT.md  PROGRESSIVE_CONTEXT.md  README.md  VERCEL_DYNAMIC_DEPLOYMENT.md  ai-review-integration.md  llm-model-switch-recommendation.md  real-serena-integration-report.md  serena-integration-summary.md
frontend/: README.md
frontend/email-intake/: index.html  package.json  vite.config.ts
sample_input/: additional_requirements.txt  api_service_spec.md  project_brief.md  web_scraper_spec.md
scripts/: README.md  add_demo_iam_permissions.py  add_demo_iam_permissions_root.py  build_index.py  check_bedrock.py  check_review_status.py  ci_token_validation.py  create_lambda_function.py  demo.sh  demo_linting_workflow.py  demo_progressive_context.py  demo_sonar_integration.py  deploy_client_project.py  deploy_to_vercel.py  fix_email_threading.py  ping_bedrock_cli.sh  post_review_to_pr.py  push_artifacts.py  run_analyser.py  run_client_simulation.py  run_dev_agent.py  run_email_intake_demo.sh  run_planner.py  run_solopilot.py  setup_email_intake_demo.py  setup_serena.py  smoke_test.py  test_bedrock_direct.py  test_email_flow.py  test_email_intake.py  test_review_system.py  validate_complex_projects.py  validate_imports.py  validate_progressive_context.py  vercel_project_manager.py
scripts/simulation/: __init__.py  client_simulator.py  conversation_engine.py  intake_adapter.py  personas.py  scenarios.py
scripts/validation/: full_pipeline_test.py
src/: README.md
src/agents/: README.md
src/common/: __init__.py  bedrock_client.py
src/providers/: README.md  __init__.py  base.py  bedrock.py  codewhisperer.py  factory.py  fake.py
src/storage/: __init__.py  budget_utils.py  models.py  proposal_version_index.py  s3_proposal_store.py
src/utils/: __init__.py
temp_review_test/milestone-test/: review-report.md  test_bad_code_example.py
temp_simple_test/: requirement.md
tests/: README.md  ai_providers_test.py  analyser_test.py  conftest.py  context_engine_test.py  context_packer_test.py  dev_agent_test.py  github_review_test.py  integration_review_promote_test.py  linter_integration_test.py  marketing_poster_test.py  planning_test.py  push_artifacts_test.py  reviewer_agent_test.py  serena_live_test.py  test_analyser_bedrock_arn.py  test_bedrock_arn_matches_account.py  test_email_conversation_flow.py  test_email_intake.py  test_email_intake_sqs.py  test_email_intake_v2.py  test_integration_pipeline.py  test_log_call_decorator.py  test_progressive_context.py  test_provider_integration.py  test_real_serena.py  test_real_serena_performance.py  test_serena_context_engine.py  test_sonarcloud_integration.py  test_token_budget.py  test_vercel_project_manager.py
uploads/: XXXNEW_max5_Europe_Warsaw_9c367d95-21ad-47ec-9b83-1044c3fe9e1d_20250624_184520.json  XXXNEW_pro_Europe_Warsaw_9c367d95-21ad-47ec-9b83-1044c3fe9e1d_20250624_184434.json  XXXNEW_pro_US_Pacific_9c367d95-21ad-47ec-9b83-1044c3fe9e1d_20250624_184622.json
utils/: __init__.py  github_review.py  linter_integration.py  sonarcloud_integration.py
vector_store/: chroma.sqlite3
(+131 files in other folders)
